Align enterprise description

--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -86,11 +86,11 @@ GraphOS provides schema [pipeline tools](../delivery) to efficiently develop and
 [Schema proposals](../delivery/schema-proposals) provide GraphOS-native schema change management.
 The centralized proposal process fosters collaboration and strengthens schema governance:
 
-- Subgraph developers can propose changes in the context of the supergraph and use automated checks and reviewer feedback to validate them.
+- Subgraph developers can propose changes in the context of the supergraph using automated checks and reviewer feedback for validation.
 - Graph consumers can actively participate by commenting on, reviewing, and approving proposals.
-- Graph owners and governance teams can use proposals to set standards and ensure that only approved changes are published.
+- Graph owners and governance teams can use proposals to set standards and ensure only approved changes are published.
 
-This increased coordination improves design decisions and accountability, making development cycles more efficient.
+This increased coordination improves design decisions and accountability, streamlining development cycles.
 
 > [Learn more about schema proposals.](../delivery/schema-proposals/)
 
