Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -16,7 +16,7 @@ import {
   SiYoutube
 } from 'react-icons/si';
 
-Apollo provides tools and resources for every developer who interacts with GraphQL. That's whether you're just [getting started with GraphQL](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an existing one](#for-client-developers), or [moving your entire organization onto the supergraph](#for-architects).
+Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API. Use Apollo for all things GraphQL, including [getting started with GraphQL](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), and [migrating your platform onto the supergraph](#for-architects).
 
 ## For architects
 
@@ -33,13 +33,13 @@ Apollo provides tools and resources for every developer who interacts with Graph
     icon={DOCSET_ICONS.odyssey}
     title="Master concepts"
     description="Learn hands-on with tutorials on GraphQL, GraphOS, and enterprise best practices."
-    path="https://www.apollographql.com/tutorials/browse?categories=GraphOS"
+    path="https://www.apollographql.com/tutorials/browse/?categories=enterprise"
     cta="Explore tutorials"
   />
   <Docset
     icon={DOCSET_ICONS.technotes}
     title="Learn from the field"
-    description="Read in-depth articles on specialized Apollo topics from our own solutions architects."
+    description="Learn about specialized topics from Apollo's own solutions architects."
     path="/technotes"
     cta="Explore tech notes"
   />
