--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -30,16 +30,16 @@ Apollo provides the developer platform and tools to unify your data and services
 
 <DocsetGrid>
   <Docset
-    icon={DOCSET_ICONS.odyssey}
-    title="Master concepts"
-    description="Learn hands-on with tutorials on GraphQL, GraphOS, and enterprise best practices."
-    path="https://www.apollographql.com/tutorials/browse/?categories=enterprise"
-    cta="Explore tutorials"
+    icon={DOCSET_ICONS.check}
+    title="Adopt best practices"
+    description="Assess your graph's current state with the Supergraph Architecture Framework (SAF)."
+    path="/graphos/enterprise/supergraph-architecture-framework"
+    cta="Learn about SAF"
   />
   <Docset
     icon={DOCSET_ICONS.technotes}
     title="Learn from the field"
-    description="Learn about specialized topics from Apollo's own solutions architects."
+    description="Learn from Apollo's own solutions architects through technical articles on specialized topics."
     path="/technotes"
     cta="Explore tech notes"
   />
