Apply suggestions from code review
Co-authored-by: Raphael Terrier <R4ph-t@users.noreply.github.com>

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -16,7 +16,7 @@ import {
   SiYoutube
 } from 'react-icons/si';
 
-Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API. Use Apollo for all things GraphQL, including [getting started with GraphQL](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), and [migrating your platform onto the supergraph](#for-architects).
+Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API. Apollo makes GraphQL work for you at any stage and any scale, whether you're [getting started](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), and [migrating your platform onto the supergraph](#for-architects).
 
 ## For architects
 
@@ -32,7 +32,7 @@ Apollo provides the developer platform and tools to unify your data and services
   <Docset
     icon={DOCSET_ICONS.check}
     title="Adopt best practices"
-    description="Assess your graph's current state with the Supergraph Architecture Framework (SAF)."
+    description="Assess your graph with the Supergraph Architecture Framework (SAF) and get tailored recommendations to improve it."
     path="/graphos/enterprise/supergraph-architecture-framework"
     cta="Learn about SAF"
   />
