Add Reference Architecture

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -16,7 +16,8 @@ import {
   SiYoutube
 } from 'react-icons/si';
 
-Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API. Apollo makes GraphQL work for you at any stage and any scale, whether you're [getting started](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), and [migrating your platform onto the supergraph](#for-architects).
+Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API.
+Apollo makes GraphQL work for you at any stage and any scale, whether you're [just getting started](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), and [migrating your platform onto the supergraph](#for-architects).
 
 ## For architects
 
@@ -27,21 +28,20 @@ Apollo provides the developer platform and tools to unify your data and services
   path="/graphos"
   cta="Learn about GraphOS"
 />
-
 <DocsetGrid>
+  <Docset
+    icon={DOCSET_ICONS.odyssey}
+    title="Deploy with guidance"
+    description="Set up an enterprise deployment of GraphOS with a self-hosted router following Apollo's reference architecture."
+    path="/graphos/enterprise/reference-architecture"
+    cta="Explore reference architecture"
+  />
   <Docset
     icon={DOCSET_ICONS.check}
     title="Adopt best practices"
     description="Assess your graph with the Supergraph Architecture Framework (SAF) and get tailored recommendations to improve it."
     path="/graphos/enterprise/supergraph-architecture-framework"
     cta="Learn about SAF"
-  />
-  <Docset
-    icon={DOCSET_ICONS.technotes}
-    title="Learn from the field"
-    description="Learn from Apollo's own solutions architects through technical articles on specialized topics."
-    path="/technotes"
-    cta="Explore tech notes"
   />
 </DocsetGrid>
 
@@ -57,14 +57,14 @@ Apollo provides the developer platform and tools to unify your data and services
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.java}
-    title="Build a server in Java"
+    title="Build a GraphQL server in Java"
     description="Explore a tutorial on implementing a GraphQL API with Java and DGS."
     path="https://www.apollographql.com/tutorials/intro-dgs"
     cta="Begin tutorial"
   />
   <Docset
     icon={DOCSET_ICONS.csharp}
-    title="Build a server in C#"
+    title="Build a GraphQL server in C#"
     description="Explore a tutorial on implementing a GraphQL API with .NET (C#) and Hot Chocolate."
     path="https://www.apollographql.com/tutorials/intro-hotchocolate"
     cta="Begin tutorial"
