Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -17,7 +17,7 @@ import {
 } from 'react-icons/si';
 
 Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API.
-Apollo makes GraphQL work for you at any stage and any scale, whether you're [just getting started](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), and [migrating your platform onto the supergraph](#for-architects).
+Apollo makes GraphQL work for you at any stage and any scale, whether you're [just getting started](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), or [migrating your platform onto the supergraph](#for-architects).
 
 ## For architects
 
@@ -31,8 +31,8 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 <DocsetGrid>
   <Docset
     icon={DOCSET_ICONS.odyssey}
-    title="Deploy with guidance"
-    description="Set up an enterprise deployment of GraphOS with a self-hosted router following Apollo's reference architecture."
+    title="Deploy reference architecture"
+    description="Set up an enterprise GraphOS deployment by following Apollo's reference architecture."
     path="/graphos/enterprise/reference-architecture"
     cta="Explore reference architecture"
   />
