--- a/src/content/graphos/delivery/schema-proposals/implementation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/implementation.mdx
@@ -63,7 +63,7 @@ Configuring the **Proposals** task's severity to **Error** ensures that only cha
 
 <Note>
 
-The Proposals task also checks _comments_ in the SDL. For example, the Proposals task fails if a matching approved proposal includes a comment with a period and the change the check is running on doesn't.
+The Proposals task also checks _descriptions_ in the SDL. For example, the Proposals task fails if a matching approved proposal includes a description with a period and the change the check is running on doesn't.
 
 </Note>
 
