Add schema proposals (#643)
* Add stubs for nav

* Add raw preview docs

* Add to-dos

* Create separate implementation page

* Add Rover info

* Rewrite configuration page

* Copyedit

* Update Linting section

* Copyedit Configure proposals

* Rewrite Propose changes page

* Add shared content for Approved proposals

* Rewrite Review proposals

* Rewrite Implement proposals

* Update page descriptions

* Add placeholder images

* Rewrite overview

* Copyedits

* Copyedit overview

* Update diagram terminology

* Copyedit

* Use "stage" vs. "status"

* Document GA features

* Copyedit

* Add notification details

* Copyedit overview

* Update default notification configurations

* Update configuration + add image placeholders

* Remove schema reference tab

* Add more screenshots

* Address feedback

* Remove edit restrictions

* Clarify permissions

* Reorganize permissions table

* Add back image

* Apply suggestions from code review

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Update src/content/graphos/delivery/configure-proposals.mdx

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Add schema proposals to other schema pipeline docs (#647)

* Add Publication tip

* Add schema proposals to Pipeline overview

* Add Proposals task to schema checks

* Add schema proposals to GraphOS docs (#649)

* Add Proposals to pages list

* Add pages list to self-hosted quickstart

* Add and use StudioPages shared content

* Include proposals in Enterprise Features

* Add schema proposal permissions and break up permissions table

* Apply suggestions from code review

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Address feedback

---------

Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

* Apply suggestions

* Fix nav

* Simplify delivery overview

* Standa

--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -4,30 +4,43 @@ subtitle: Ensure streamlined schema development and delivery
 description: Efficiently develop and deploy changes to your GraphQL schema with the Apollo GraphOS suite of schema governance and delivery tools.
 ---
 
-GraphOS provides schema pipeline tools to efficiently develop and deploy changes to your supergraph schema. These tools fall into two main categories:
+GraphOS provides schema pipeline tools to develop and deploy changes to your graph schemas. These tools fall into two main categories:
 
-- **Schema governance** tools let you manage, validate, and enforce consistency standards in your supergraph schema to ensure reliability and compatibility across different services and teams.
-- **Schema delivery** tools let you integrate schema publication seamlessly into your DevOps workflows.
+- **Schema governance** tools let you manage, validate, and enforce standards in your schemas.
+- **Schema delivery** tools let you integrate schema publication into your DevOps workflows.
 
 ## Schema governance
 
 GraphOS provides the following schema governance tools:
 
-- [Schema checks](./schema-checks) help identify breaking changes before you make them and help determine when a potentially dangerous change is, in fact, safe.
-- [Schema linting](./schema-linter) ensures consistent, well-formed schemas across all your services. Automated linting lowers maintenance overheads and improves developer productivity. Schema linting can run as part of schema checks in GraphOS Studio and as one-offs via the Rover CLI.
+- [Schema checks](./schema-checks) identify breaking changes before you publish them. They can also determine when a potentially dangerous change is, in fact, safe.
+- [Schema linting](./schema-linter) ensures consistent, well-formed schemas. Automated linting lowers maintenance overheads and improves developer productivity. You can run the linter as [part of schema checks](./schema-linter#linting-via-schema-checks) in GraphOS Studio and [one-off via the Rover CLI](./schema-linter#one-off-linting).
+- [Schema proposals](./schema-proposals) provide GraphOS-native schema change management. Team members propose changes to subgraph schemas, and others review and approve them before they're implemented. Schema proposals do more than just strengthen governance&mdash;they foster cross-organization collaboration.
+
+<EnterpriseFeature>
+
+Schema proposals are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/docs/graphos/enterprise/).
+
+</EnterpriseFeature>
 
 ## Schema delivery
 
-Schema delivery refers to the process of making your supergraph schema available to clients. You can publish schema changes [using the Rover CLI](./publishing-schemas) or [GraphOS Platform API](/graphos/platform-api). Using the Rover CLI command enables you to easily integrate publication into your continuous delivery pipeline.
+Schema delivery refers to the process of making your supergraph schema available to clients. You can publish schema changes [using the Rover CLI](./publishing-schemas) or [GraphOS Platform API](/graphos/platform-api). Using the Rover CLI command lets you integrate publication into your continuous delivery pipeline.
 
-To incorporate other important aspects of your supergraph configuration, such as your router configuration or federation version, GraphOS uses the concept of [**launches**](./launches). Schema publications trigger launches, and you can monitor them from the **Launches** page in GraphOS Studio.
+To integrate other aspects of your supergraph configuration, such as your router configuration or federation version, GraphOS uses the concept of [**launches**](./launches). Schema publications trigger launches which you can monitor them from the **Launches** page in GraphOS Studio.
 
 <img className="screenshot" src="../img/launches-page.jpg" width="500" />
 
 ### Contracts
 
-GraphOS [**contracts**](./contracts) are an enterprise feature that let you deliver _different_ subsets of your supergraph to different consumers. Contracts rely on `@tags` across various subgraph schemas to denote which types and fields are accessible to different consumers.
+<EnterpriseFeature>
+
+Contracts are only available with a [GraphOS Enterprise plan](https://www.apollographql.com/docs/graphos/enterprise/).
+
+</EnterpriseFeature>
+
+GraphOS [**contracts**](./contracts) let you deliver different subsets of your supergraph to different consumers. Contracts rely on [`@tags`](./contract-setup#1-add-tags-to-subgraph-schemas) in subgraph schemas to denote which types and fields are accessible to different consumers.
 
 ## Client operation validation
 
-In addition to the governance and delivery tools for schema developers, Apollo provides a CLI command for app developers to confirm that GraphQL operations in a client application are compatible with the published schema. Refer to the [Validating client operations page](/rover/validating-client-operations) for more information.
+Apollo provides app developers a way to confirm client operations' compatibility with the published schema. Refer to the [Validating client operations page](/rover/validating-client-operations) for more information.
