--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -77,7 +77,24 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 </Tip>
 
-## Schema filtering with contracts
+## Schema pipeline
+
+GraphOS provides schema [pipeline tools](../delivery) to efficiently develop and deploy changes to your supergraph schema.
+
+### Schema change management with proposals
+
+[Schema proposals](../delivery/schema-proposals) provide GraphOS-native schema change management.
+The centralized proposal process fosters collaboration and strengthens schema governance:
+
+- Subgraph developers can propose changes in the context of the supergraph using automated checks and reviewer feedback for validation.
+- Graph consumers can actively participate by commenting on, reviewing, and approving proposals.
+- Graph owners and governance teams can use proposals to set standards and ensure only approved changes are published.
+
+This increased coordination improves design decisions and accountability, streamlining development cycles.
+
+> [Learn more about schema proposals.](../delivery/schema-proposals/)
+
+### Schema filtering with contracts
 
 GraphOS [**Contracts**](../delivery/contracts/) enable you to filter your supergraph schema's types and fields according to different inclusion and exclusion rules you define:
 
