--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -5,14 +5,12 @@ subtitle: ' '
 description: Learn how Apollo GraphQL can help enterprise architects, API implementers, and client developers build, deploy, and manage a supergraph of unified microservices, data sources, and applications.
 ---
 
-import {ButtonGroup, VStack} from '@chakra-ui/react';
-import {CommunityButton, Docset, DocsetGrid, GradientCard} from '../../components/HomePage';
 import {
   ApolloClientIcon,
   ApolloIOSIcon,
   ApolloKotlinIcon,
-  CheckIcon,
   CSharpIcon,
+  CheckIcon,
   DiscordIcon,
   DiscourseIcon,
   GitHubIcon,
@@ -24,6 +22,13 @@ import {
   TwitterIcon,
   YoutubeIcon
 } from '../../components/Icons';
+import {ButtonGroup, VStack} from '@chakra-ui/react';
+import {
+  CommunityButton,
+  Docset,
+  DocsetGrid,
+  GradientCard
+} from '../../components/HomePage';
 
 Apollo provides the developer platform and tools to unify your data and services into a supergraph—a single distributed GraphQL API.
 Apollo makes GraphQL work for you at any stage and any scale, whether you're [just getting started](#for-graphql-newcomers), [building your first API](#for-api-developers), [querying an API](#for-client-developers), or [migrating your platform onto the supergraph](#for-architects).
@@ -31,7 +36,7 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 ## For architects
 
 <GradientCard
-  icon={GraphOSIcon}
+  icon={<GraphOSIcon />}
   title="Build a supergraph"
   description="Use Apollo GraphOS to define, build, connect, and observe all of your data services together in a supergraph."
   path="/graphos"
@@ -39,14 +44,14 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 />
 <DocsetGrid>
   <Docset
-    icon={RocketIcon}
+    icon={<RocketIcon />}
     title="Deploy reference architecture"
     description="Set up an enterprise GraphOS deployment by following Apollo's reference architecture."
     path="/graphos/enterprise/reference-architecture"
     cta="Explore reference architecture"
   />
   <Docset
-    icon={CheckIcon}
+    icon={<CheckIcon />}
     title="Adopt best practices"
     description="Assess your graph with the Supergraph Architecture Framework (SAF) and get tailored recommendations to improve it."
     path="/graphos/enterprise/supergraph-architecture-framework"
@@ -57,7 +62,7 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 ## For API developers
 
 <Docset
-  icon={NodeJsIcon}
+  icon={<NodeJsIcon />}
   title="Build a GraphQL server in Node.js"
   description="Build a production-ready API that handles multiple datasources with Apollo Server."
   path="/apollo-server"
@@ -65,14 +70,14 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 />
 <DocsetGrid>
   <Docset
-    icon={JavaIcon}
+    icon={<JavaIcon />}
     title="Build a GraphQL server in Java"
     description="Explore a tutorial on implementing a GraphQL API with Java and DGS."
     path="https://www.apollographql.com/tutorials/intro-dgs"
     cta="Begin tutorial"
   />
   <Docset
-    icon={CSharpIcon}
+    icon={<CSharpIcon />}
     title="Build a GraphQL server in C#"
     description="Explore a tutorial on implementing a GraphQL API with .NET (C#) and Hot Chocolate."
     path="https://www.apollographql.com/tutorials/intro-hotchocolate"
@@ -84,16 +89,16 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
 
 **Apollo Client** is the industry-standard GraphQL client library. Execute GraphQL operations, cache their results, and manage your application's state in one place.
 
-<Docset icon={ApolloClientIcon} title="React / JS" path="/react" />
+<Docset icon={<ApolloClientIcon />} title="React / JS" path="/react" />
 <DocsetGrid>
-  <Docset icon={ApolloIOSIcon} title="iOS" path="/ios" />
-  <Docset icon={ApolloKotlinIcon} title="Kotlin" path="/kotlin" />
+  <Docset icon={<ApolloIOSIcon />} title="iOS" path="/ios" />
+  <Docset icon={<ApolloKotlinIcon />} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
 
 ## For GraphQL newcomers
 
 <GradientCard
-  icon={GraphQLIcon}
+  icon={<GraphQLIcon />}
   title="Improve developer velocity"
   description="Understand how GraphQL and Apollo help enhance developer experience and ship features faster."
   path="/intro/benefits"
@@ -110,27 +115,27 @@ We love hearing from you! Here are a few ways to connect with us and other Apoll
   <CommunityButton
     aria-label="Community GitHub"
     href="https://github.com/apollographql"
-    icon={GitHubIcon}
+    icon={<GitHubIcon />}
   />
   <CommunityButton
     aria-label="Community YouTube"
     href="https://youtube.com/apollographql"
-    icon={YoutubeIcon}
+    icon={<YoutubeIcon />}
   />
   <CommunityButton
     aria-label="Community Forums"
     href="https://community.apollographql.com"
-    icon={DiscourseIcon}
+    icon={<DiscourseIcon />}
   />
   <CommunityButton
     aria-label="Community Discord"
     href="https://discord.gg/yFZJH2QYrK"
-    icon={DiscordIcon}
+    icon={<DiscordIcon />}
   />
   <CommunityButton
     aria-label="Community Twitter"
     href="https://twitter.com/apollographql"
-    icon={TwitterIcon}
+    icon={<TwitterIcon />}
   />
 </ButtonGroup>
 
