--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -10,7 +10,7 @@ import {
   ApolloIOSIcon,
   ApolloKotlinIcon,
   CSharpIcon,
-  CheckIcon,
+  CircleCheckIcon,
   DiscordIcon,
   DiscourseIcon,
   GitHubIcon,
@@ -51,7 +51,7 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're [ju
     cta="Explore reference architecture"
   />
   <Docset
-    icon={<CheckIcon />}
+    icon={<CircleCheckIcon />}
     title="Adopt best practices"
     description="Assess your graph with the Supergraph Architecture Framework (SAF) and get tailored recommendations to improve it."
     path="/graphos/enterprise/supergraph-architecture-framework"
