--- a/src/content/shared/graphos-enteprise-required.mdx
+++ b/src/content/shared/graphos-enteprise-required.mdx
@@ -1,5 +1,5 @@
 import {Box, Center, Flex, Link, Text, chakra} from '@chakra-ui/react';
-import {TbComponents} from 'react-icons/tb';
+import {EnterpriseIcon} from '../../components/Icons';
 
 <Box
     pl="2"
@@ -19,7 +19,7 @@ import {TbComponents} from 'react-icons/tb';
 <Flex as="span">
   <chakra.span pl="10px" pr="10px">
     <Center h="100%">
-      <TbComponents />
+      <EnterpriseIcon />
     </Center>
   </chakra.span>
   <Text pl="1">
