Update link color

--- a/src/content/shared/graphos-enteprise-required.mdx
+++ b/src/content/shared/graphos-enteprise-required.mdx
@@ -26,7 +26,7 @@ import {TbComponents} from 'react-icons/tb';
     <b>
       This feature is only available with a{' '}
       <Link
-        color={'primary'}
+        color={'tertiary'}
         href="https://www.apollographql.com/docs/graphos/enterprise/"
       >
         GraphOS Enterprise plan
@@ -36,7 +36,7 @@ import {TbComponents} from 'react-icons/tb';
     If your organization doesn't currently have an Enterprise plan, you can test
     this functionality by signing up for a free{' '}
     <Link
-      color={'primary'}
+      color={'tertiary'}
       href="https://www.apollographql.com/docs/graphos/org/plans/#enterprise-trials"
     >
       Enterprise trial
