--- a/src/content/shared/graphos-enteprise-required.mdx
+++ b/src/content/shared/graphos-enteprise-required.mdx
@@ -33,8 +33,8 @@ import {TbComponents} from 'react-icons/tb';
       </Link>
       .
     </b>{' '}
-    If your organization doesn't currently have an Enterprise plan, you can test
-    this functionality by signing up for a free{' '}
+    If your organization doesn't have an Enterprise plan, you can test this
+    functionality by signing up for a free{' '}
     <Link
       color={'tertiary'}
       href="https://www.apollographql.com/docs/graphos/org/plans/#enterprise-trials"
