--- a/src/content/technotes/TN0037-api-gateways.mdx
+++ b/src/content/technotes/TN0037-api-gateways.mdx
@@ -12,6 +12,8 @@ These gateways usually live at the outermost edges of your companies infrastruct
 
 The key distinction of the router is that is not based on URLs or REST endpoints. The router is a GraphQL-native solution to handle your clients API operations.
 
+> Update: Apollo GraphQL and Kong have partnered to provide a joint paper to API practitioners with the tools they need to navigate the complex API landscape and drive successful digital experiences for their users. You can read more from the official [blog post](https://www.apollographql.com/blog/leveraging-graphql-for-next-generation-api-platforms)
+
 ## GraphQL native
 
 First, let's define what we mean by "GraphQL native". Apollo Router runs all the client operations against a [supergraph](/intro/platform/).
