--- a/src/content/technotes/TN0037-api-gateways.mdx
+++ b/src/content/technotes/TN0037-api-gateways.mdx
@@ -12,7 +12,11 @@ These gateways usually live at the outermost edges of your companies infrastruct
 
 The key distinction of the router is that is not based on URLs or REST endpoints. The router is a GraphQL-native solution to handle your clients API operations.
 
-> Update: Apollo GraphQL and Kong have partnered to provide a joint paper to API practitioners with the tools they need to navigate the complex API landscape and drive successful digital experiences for their users. You can read more from the official [blog post](https://www.apollographql.com/blog/leveraging-graphql-for-next-generation-api-platforms)
+<Tip>
+
+Apollo GraphQL and Kong have partnered to produce a joint paper that provides API practitioners with the tools they need to navigate the complex API landscape and drive successful digital experiences. Read more in the [blog post](https://www.apollographql.com/blog/leveraging-graphql-for-next-generation-api-platforms).
+
+</Tip>
 
 ## GraphQL native
 
