Update TN0037-api-gateways with Kong paper (#733)
* Update TN0037-api-gateways.mdx

Add link to Kong white paper

* Update src/content/technotes/TN0037-api-gateways.mdx

---------

Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>

--- a/src/content/technotes/TN0037-api-gateways.mdx
+++ b/src/content/technotes/TN0037-api-gateways.mdx
@@ -12,6 +12,12 @@ These gateways usually live at the outermost edges of your companies infrastruct
 
 The key distinction of the router is that is not based on URLs or REST endpoints. The router is a GraphQL-native solution to handle your clients API operations.
 
+<Tip>
+
+Apollo GraphQL and Kong have partnered to produce a joint paper that provides API practitioners with the tools they need to navigate the complex API landscape and drive successful digital experiences. Read more in the [blog post](https://www.apollographql.com/blog/leveraging-graphql-for-next-generation-api-platforms).
+
+</Tip>
+
 ## GraphQL native
 
 First, let's define what we mean by "GraphQL native". Apollo Router runs all the client operations against a [supergraph](/intro/platform/).
