adds quickstart and fixes links

--- a/src/content/graphos/basics/routing/cloud-dedicated/throughput.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/throughput.mdx
@@ -1,12 +1,12 @@
 ---
-title: GCU Throughput
-subtitle: Understanding how throughput performance of GCUs
+title: GCU Throughput Performance
+subtitle: Understanding GCU performance and scaling
 description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
 ---
 
 <PreviewFeature>
 
-Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
+Cloud Dedicated is currently in invite-only [preview](/graphos/routing/cloud-dedicated#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
 
 </PreviewFeature>
 
@@ -50,7 +50,7 @@ Dedicated starts with 1 x GCU when you create a new variant. You can add additio
 
 <img
   className="screenshot"
-  alt="GraphOS Studio variant page"
+  alt="GraphOS Studio managed GCUs"
   src="../../../img/cloud-dedicated/gcus-manage.png"
 />
 
@@ -58,7 +58,7 @@ Then, select the number of GCUs required and choose "Save".
 
 <img
   className="screenshot"
-  alt="GraphOS Studio variant page"
+  alt="GraphOS Studio edit GCUs"
   src="../../../img/cloud-dedicated/gcus-scale.png"
 />
 
